# cookiecutter-discordpy

./: LICENSE  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  README.md  ecosystem.config.js  pyproject.toml
{{ cookiecutter.project_slug }}/docs/: commands.md  config.md
{{ cookiecutter.project_slug }}/tests/: test_tmp.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: __init__.py  config.py  config_example.json  {{ cookiecutter.project_slug }}.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/my_extension/: __init__.py  cog.py
